<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/status_bar_height">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                style="@style/Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:id="@+id/toolbar" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:id="@+id/setting_content"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <Button
                android:id="@+id/button_wechat"
                android:layout_width="128dp"
                android:text="@string/donate_wechat"
                android:textColor="#FFF"
                android:layout_height="64dp" />

            <Button
                android:layout_marginTop="8dp"
                android:id="@+id/button_alipay"
                android:text="@string/donate_alipay"
                android:textColor="#FFF"
                android:layout_width="168dp"
                android:layout_height="64dp" />

            <Button
                android:layout_marginTop="8dp"
                android:id="@+id/button_paypal"
                android:text="@string/donate_paypal"
                android:textColor="#FFF"
                android:layout_width="168dp"
                android:layout_height="64dp" />

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>